--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,62 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".view.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.design.widget.AppBarLayout
+    <data>
+
+        <variable
+            name="mainActVM"
+            type="com.xdsjs.mdnote.viewModel.MainActVM" />
+    </data>
+
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:context=".view.activity.MainActivity">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <include layout="@layout/content_main" />
+        </android.support.design.widget.AppBarLayout>
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="12dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        fab:fab_addButtonColorNormal="@color/primary"
-        fab:fab_addButtonColorPressed="@color/dark_primary"
-        fab:fab_addButtonPlusIconColor="@android:color/white">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rcView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/create_note"
+        <com.getbase.floatingactionbutton.FloatingActionsMenu
+            android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingTop="0.5dp"
-            android:src="@drawable/ic_notes_light"
-            fab:fab_colorNormal="@color/grey"
-            fab:fab_colorPressed="@color/light_grey"
-            fab:fab_title="Create Note" />
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="12dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            fab:fab_addButtonColorNormal="@color/primary"
+            fab:fab_addButtonColorPressed="@color/dark_primary"
+            fab:fab_addButtonPlusIconColor="@android:color/white">
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/create_folder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingTop="0.5dp"
-            android:src="@drawable/ic_folder_light"
-            fab:fab_colorNormal="@color/grey"
-            fab:fab_colorPressed="@color/light_grey"
-            fab:fab_title="Create Folder" />
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
-</android.support.design.widget.CoordinatorLayout>
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/create_normal_folder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:onClick="@{mainActVM.onCreateNormalNoteClick}"
+                android:paddingTop="0.5dp"
+                android:src="@drawable/ic_folder_light"
+                fab:fab_colorNormal="@color/grey"
+                fab:fab_colorPressed="@color/light_grey"
+                fab:fab_title="Create Folder" />
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/create_md_note"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:onClick="@{mainActVM.onCreateMdNoteClick}"
+                android:paddingTop="0.5dp"
+                android:src="@drawable/ic_notes_light"
+                fab:fab_colorNormal="@color/grey"
+                fab:fab_colorPressed="@color/light_grey"
+                fab:fab_title="Create Note" />
+        </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
+    </android.support.design.widget.CoordinatorLayout>
+
+</layout>
