--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- font size -->
+    <dimen name="large_font_size">18sp</dimen>
+    <dimen name="mid_font_size">16sp</dimen>
+    <dimen name="small_font_size">12sp</dimen>
+
 </resources>
