--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/light_grey"
         android:fitsSystemWindows="true"
         tools:openDrawer="start">
 
@@ -36,6 +37,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:background="?attr/colorPrimary"
+                    app:theme="@style/AppTheme"
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
 
             </android.support.design.widget.AppBarLayout>
@@ -45,8 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                bind:adapter="@{mainActVM.mainActAdapter}">
-            </android.support.v7.widget.RecyclerView>
+                bind:adapter="@{mainActVM.mainActAdapter}"></android.support.v7.widget.RecyclerView>
 
             <com.getbase.floatingactionbutton.FloatingActionsMenu
                 android:id="@+id/fab"
@@ -96,7 +97,6 @@
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header_main"
             app:menu="@menu/activity_main_drawer" />
-
     </android.support.v4.widget.DrawerLayout>
 
 </layout>
