--- a/app/src/main/res/layout/activity_mdnote.xml
+++ b/app/src/main/res/layout/activity_mdnote.xml
@@ -13,6 +13,7 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/light_grey"
         android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
@@ -25,7 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/white"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:theme="@style/AppTheme" />
         </android.support.design.widget.AppBarLayout>
 
 
