--- a/app/src/main/res/layout/recy_mainpage_item.xml
+++ b/app/src/main/res/layout/recy_mainpage_item.xml
@@ -10,41 +10,49 @@
             type="com.xdsjs.mdnote.model.bean.Note" />
     </data>
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        app:cardBackgroundColor="@color/cardview_light_background"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="6dp">
+        android:padding="5dp">
 
-        <RelativeLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp">
+            android:clickable="true"
+            app:cardBackgroundColor="@color/cardview_light_background"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="6dp">
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{note.getTitle}" />
-
-            <TextView
-                android:id="@+id/tv_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_title"
-                android:text="@{note.getDate}" />
-
-            <TextView
-                android:id="@+id/tv_review"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_date"
-                android:maxLines="3"
-                android:text="@{note.getReview}" />
-        </RelativeLayout>
+                android:padding="5dp">
 
-    </android.support.v7.widget.CardView>
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{note.getTitle}"
+                    android:textColor="@color/black" />
 
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_title"
+                    android:text="@{note.getDate}"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/tv_review"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_date"
+                    android:maxLines="3"
+                    android:text="@{note.getReview}"
+                    android:textColor="@color/black" />
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
 </layout>
