--- a/app/src/main/res/menu/md_note.xml
+++ b/app/src/main/res/menu/md_note.xml
@@ -4,10 +4,12 @@
     <item
         android:id="@+id/nav_share"
         android:icon="@drawable/ic_menu_share"
-        android:title="@string/menu_share" />
+        android:orderInCategory="1"
+        android:title="@string/menu_share"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_settings"
-        app:showAsAction="never"
-        android:orderInCategory="100"
-        android:title="@string/action_settings" />
+        android:orderInCategory="2"
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
 </menu>
