--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:background="?attr/colorPrimary"
-                    app:theme="@style/AppTheme"
-                    app:popupTheme="@style/AppTheme.PopupOverlay" />
+                    app:popupTheme="@style/AppTheme.PopupOverlay"
+                    app:theme="@style/AppTheme" />
 
             </android.support.design.widget.AppBarLayout>
 
@@ -47,7 +47,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                bind:adapter="@{mainActVM.mainActAdapter}"></android.support.v7.widget.RecyclerView>
+                bind:adapter="@{mainActVM.mainActAdapter}">
+            </android.support.v7.widget.RecyclerView>
 
             <com.getbase.floatingactionbutton.FloatingActionsMenu
                 android:id="@+id/fab"
