--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
-            name="mdNoteVM"
-            type="com.xdsjs.mdnote.viewModel.MdNoteActVM" />
+            name="reviewActVM"
+            type="com.xdsjs.mdnote.viewModel.ReviewActVM" />
     </data>
-
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -31,15 +29,13 @@
                 app:theme="@style/AppTheme" />
         </android.support.design.widget.AppBarLayout>
 
-        <EditText
-            android:id="@+id/etMdNote"
+        <WebView
+            android:id="@+id/wvReview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
-            android:background="@color/light_grey"
-            android:gravity="top"
-            android:hint="写下此刻的想法"
-            android:lineSpacingMultiplier="1.2"
+            android:background="@color/transparent"
+            android:layerType="software"
             android:padding="10sp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
