--- a/app/src/main/res/layout/activity_hand_write.xml
+++ b/app/src/main/res/layout/activity_hand_write.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-            name="mdNoteVM"
-            type="com.xdsjs.mdnote.viewModel.MdNoteActVM" />
+            name="handWriteVM"
+            type="com.xdsjs.mdnote.viewModel.HandWriteActVM" />
     </data>
-
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -32,10 +32,9 @@
         </android.support.design.widget.AppBarLayout>
 
         <EditText
-            android:id="@+id/etMdNote"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:background="@color/light_grey"
             android:gravity="top"
             android:hint="写下此刻的想法"
@@ -44,5 +43,4 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </android.support.design.widget.CoordinatorLayout>
-
 </layout>
