--- a/app/src/main/res/menu/md_note.xml
+++ b/app/src/main/res/menu/md_note.xml
@@ -2,14 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/nav_review"
+        android:icon="@drawable/ic_visibility_black_24dp"
+        android:orderInCategory="10"
+        android:title="@string/menu_review"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/nav_share"
-        android:icon="@drawable/ic_menu_share"
-        android:orderInCategory="1"
+        android:icon="@drawable/ic_share_black_24dp"
+        android:orderInCategory="9"
         android:title="@string/menu_share"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="2"
+        android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
