--- a/app/src/main/res/layout/activity_mdnote.xml
+++ b/app/src/main/res/layout/activity_mdnote.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
@@ -31,17 +32,29 @@
                 app:theme="@style/AppTheme" />
         </android.support.design.widget.AppBarLayout>
 
-        <EditText
-            android:id="@+id/etMdNote"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:background="@color/light_grey"
-            android:gravity="top"
-            android:hint="写下此刻的想法"
-            android:lineSpacingMultiplier="1.2"
-            android:padding="10sp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <EditText
+                android:id="@+id/etMdNote"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:background="@color/light_grey"
+                android:gravity="top"
+                android:hint="写下此刻的想法"
+                android:lineSpacingMultiplier="1.2"
+                android:padding="10sp" />
+
+            <include
+                layout="@layout/bottom_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                bind:mdNoteVM="@{mdNoteVM}" />
+        </FrameLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
